# ai-streak

./: README.md  docker-compose.yml
auth-service/: Cargo.toml
auth-service/migrations/: 20250905141824_initial.sql
auth-service/src/: main.rs
auth-service/src/db/: mod.rs
auth-service/src/db/domain/: user.rs
auth-service/src/http/: mod.rs
backend/: docker-compose.yml
backend/auth-service/: .env.example  Cargo.toml
backend/auth-service/src/: app.rs  main.rs
backend/auth-service/src/cli/: mod.rs  seeding.rs
backend/auth-service/src/http/: mod.rs
backend/auth-service/src/http/routes/: current.rs  login.rs  mod.rs
backend/auth-service/src/http/utils/: auth.rs
backend/auth-service/src/service/: auth_service.rs  mod.rs  user_service.rs  users_service.rs
backend/auth-service/src/streaming/: config.rs  consumer.rs  error.rs  mod.rs  printer.rs  producer.rs
backend/common/: Cargo.toml
backend/common/src/: lib.rs
backend/common/src/db/: mod.rs
backend/common/src/domain/: mod.rs  notes.rs  user.rs
backend/notes-service/: .env  .env.example  Cargo.toml
backend/notes-service/migrations/: 20250905181949_initial.sql
backend/notes-service/src/: app.rs  main.rs
backend/notes-service/src/http/: mod.rs
backend/notes-service/src/service/: mod.rs  notes_service.rs
common/: Cargo.toml
common/src/db/: mod.rs
common/src/domain/: notes.rs  user.rs
frontend/: package-lock.json
frontend/src/app/: page.tsx
frontend/src/components/: container.tsx
frontend/src/components/ui/: container.tsx
notes-service/: Cargo.toml
rust-common/: Cargo.toml
(+3 files in other folders)
