[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
dotenvy = "0.15.7"
sqlx = {version = "0.7", features=["runtime-tokio", "postgres", "time"]}
time = "0.3.43"
tokio = {version = "1.47.1", features = ["full"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
common={path = "../common"}
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.9"
argon2 = "0.5.3"
anyhow = "1.0.99"
serde_json = "1.0.143"
