[package]
name = "notes-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
dotenvy = "0.15.7"
sqlx = {version = "0.8.6", features=["runtime-tokio", "postgres"]}
time = "0.3.43"
tokio = {version = "1.47.1", features = ["full"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
common={path = "../common"}