[package]
name = "notes-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
dotenvy = "0.15.7"
sqlx = {version = "0.7", features=["runtime-tokio", "postgres", "time"]}
time = "0.3.43"
tokio = {version = "1.47.1", features = ["full"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
common={path = "../common"}
anyhow = "1.0.99"
serde_json = "1.0.143"
clap = { version = "4.5.47", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.41"
